--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <button id="register-btn">Create Account</button>
     </div>
 
+    <div id="register">
+        <h2>Create an account</h2>
+        <input type="text" id="register-username" placeholder="Username">
+        <input type="password" id="register-password" placeholder="Password">
+        <button id="register-btn">Register</button>
+    </div>
+    
     <div class="add-recipe-form" style="display:none;">
         <button id="add-recipe-btn">Add a recipe</button>
     </div>
