--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>The Lit Cookbook</title>
 </head>
@@ -18,7 +18,7 @@
         <button id="login-btn">Login</button>
         <button id="logout-btn">Logout</button>
     </div>
-    
+
     <div id="register">
         <h2>Create an account</h2>
         <input type="text" id="register-username" placeholder="Username">
